feat(ci-cd): notification service + api addon in other service
notification service + api add on in other service

gh-0

--- a/packages/migrations/.env.example
+++ b/packages/migrations/.env.example
@@ -10,3 +10,9 @@ SUBSCRIPTION-SERVICE_DB_USER=
       
 SUBSCRIPTION-SERVICE_DB_DATABASE= 
 SUBSCRIPTION-SERVICE_DB_PASSWORD=
+NOTIFICATION-SERVICE_DB_HOST= 
+NOTIFICATION-SERVICE_DB_PORT= 
+NOTIFICATION-SERVICE_DB_USER= 
+      
+NOTIFICATION-SERVICE_DB_DATABASE= 
+NOTIFICATION-SERVICE_DB_PASSWORD=
