feat(notification-service-service): add notification service
add notification service

gh-0

--- a/facades/tenant-mgmt-facade/Dockerfile
+++ b/facades/tenant-mgmt-facade/Dockerfile
@@ -31,13 +31,14 @@ WORKDIR /home/node/app
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
+COPY --chown=node tenant-management-service-0.0.1.tgz ./
 COPY --chown=node package*.json ./
 
 # The following two commands is used to copy the `packages`,`service` directory from the local file system to the Docker image.
 #  The `--chown=node` flag ensures that the ownership of the copied files/directories is set to the `node` user.
 #  This is important because the subsequent commands in the Dockerfile are executed with the `node` user,
 #  and it needs the appropriate permissions to access and modify the copied files/directories.
-COPY --chown=node packages ./packages
+# COPY --chown=node packages ./packages
 
 COPY --chown=node $FROM_FOLDER/$SERVICE_NAME ./$FROM_FOLDER/$SERVICE_NAME
 
@@ -73,7 +74,7 @@ WORKDIR /home/node/app
 COPY --from=BASE --chown=node /home/node/app/node_modules ./node_modules
 COPY --from=BASE --chown=node /home/node/app/package.json ./
 COPY --from=BASE --chown=node /home/node/app/package-lock.json ./
-COPY --from=BASE --chown=node /home/node/app/packages ./packages
+# COPY --from=BASE --chown=node /home/node/app/packages ./packages
 COPY --from=BASE --chown=node /home/node/app/$FROM_FOLDER/$SERVICE_NAME ./$FROM_FOLDER/$SERVICE_NAME
 
 # Set the working directory to `/home/node/app/services/auth-service`
