--- a/services/subscription-service/package.json
+++ b/services/subscription-service/package.json
@@ -77,7 +77,7 @@
         "loopback-connector-postgresql": "^7.0.4",
         "loopback4-authentication": "^12.0.0",
         "loopback4-authorization": "^7.0.0",
-        "subscription-service": "file:subscription-service-0.0.1.tgz",
+        "subscription-service": "file:../../../../sourcefuse/arc-saas/services/subscription-service/subscription-service-0.0.1.tgz",
         "swagger-stats": "^0.99.5",
         "symlink-resolver": "0.2.1",
         "tslib": "^2.6.2"
