--- a/facades/tenant-mgmt-facade/package.json
+++ b/facades/tenant-mgmt-facade/package.json
@@ -73,6 +73,7 @@
         "@opentelemetry/sdk-trace-base": "^1.15.0",
         "@opentelemetry/sdk-trace-node": "^1.15.0",
         "@sourceloop/core": "^13.1.0",
+        "@sourceloop/ctrl-plane-tenant-management-service": "file:sourceloop-ctrl-plane-tenant-management-service-0.2.0.tgz",
         "@types/jsonwebtoken": "^9.0.5",
         "dotenv": "^16.0.3",
         "dotenv-extended": "^2.9.0",
@@ -86,7 +87,6 @@
         "loopback4-ratelimiter": "^7.0.0",
         "swagger-stats": "^0.99.5",
         "symlink-resolver": "0.2.1",
-        "tenant-management-service": "file:tenant-management-service-0.0.1.tgz",
         "tslib": "^2.4.1"
     },
     "devDependencies": {
