feat(my-facade-facade): integrate auth0
integrate auth0

GH-5

--- a/facades/tenant-mgmt-facade/package.json
+++ b/facades/tenant-mgmt-facade/package.json
@@ -75,6 +75,7 @@
         "@sourceloop/core": "^13.1.0",
         "@sourceloop/ctrl-plane-tenant-management-service": "file:sourceloop-ctrl-plane-tenant-management-service-0.2.0.tgz",
         "@types/jsonwebtoken": "^9.0.5",
+        "auth0": "^4.10.0",
         "dotenv": "^16.0.3",
         "dotenv-extended": "^2.9.0",
         "handlebars": "^4.7.8",
