feat: add marketplace integration

--- a/facades/tenant-mgmt-facade/.env.example
+++ b/facades/tenant-mgmt-facade/.env.example
@@ -11,3 +11,19 @@ SUBSCRIPTION_SERVICE_URL=
 TENANT_MGMT_URL=
 APP_NAME=
 CSP_SCRIPT_SRC_HASH=
+
+
+DB_HOST=
+DB_PORT=
+DB_USER=
+DB_SCHEMA=
+DB_PASSWORD=
+DB_DATABASE=
+
+# auth db details used in fetching marketplace user having access to tenant creation
+AUTH_DB_HOST=
+AUTH_DB_PORT=
+AUTH_DB_USER=
+AUTH_DB_SCHEMA=
+AUTH_DB_PASSWORD=
+AUTH_DB_DATABASE=
