--- a/services/orchestrator-service/package.json
+++ b/services/orchestrator-service/package.json
@@ -63,6 +63,8 @@
     "@loopback/service-proxy": "^7.0.4",
     "@vendia/serverless-express": "^4.12.6",
     "aws-lambda": "^1.0.7",
+    "axios": "^1.7.7",
+    "jsonwebtoken": "^9.0.2",
     "tslib": "^2.6.3"
   },
   "devDependencies": {
@@ -70,6 +72,7 @@
     "@loopback/eslint-config": "^15.0.3",
     "@loopback/testlab": "^7.0.4",
     "@types/aws-lambda": "^8.10.141",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.12",
     "eslint": "^8.57.0",
     "source-map-support": "^0.5.21",
