--- a/services/subscription-service/package.json
+++ b/services/subscription-service/package.json
@@ -73,6 +73,7 @@
     "@opentelemetry/sdk-trace-node": "^1.15.0",
     "@sourceloop/core": "^13.1.0",
     "@sourceloop/ctrl-plane-subscription-service": "file:sourceloop-ctrl-plane-subscription-service-0.2.1.tgz",
+    "loopback4-billing": "file:loopback4-billing-0.0.1.tgz",
     "dotenv": "^16.0.3",
     "dotenv-extended": "^2.9.0",
     "loopback-connector-postgresql": "^7.0.4",
