feat(my-facade-facade): add envs
add envs

BREAKING CHANGE:
yes

gh-34

--- a/facades/tenant-mgmt-facade/.env.example
+++ b/facades/tenant-mgmt-facade/.env.example
@@ -27,3 +27,6 @@ AUTH_DB_USER=
 AUTH_DB_SCHEMA=
 AUTH_DB_PASSWORD=
 AUTH_DB_DATABASE=
+
+# payment gateway id of payment gateway used for payment
+GATEWAY_ACCOUNT_ID=
