fix(authentication-service-service): update migrations
update migrations

gh-1

--- a/facades/tenant-mgmt-facade/.env.example
+++ b/facades/tenant-mgmt-facade/.env.example
@@ -30,3 +30,5 @@ AUTH_DB_DATABASE=
 
 # payment gateway id of payment gateway used for payment
 GATEWAY_ACCOUNT_ID=
+WEBHOOK_USERNAME=
+WEBHOOK_PASSWORD=
