chore(authentication-service): env defaults
GH-00

--- a/services/authentication-service/.env.defaults
+++ b/services/authentication-service/.env.defaults
@@ -62,3 +62,13 @@ AZURE_AUTH_COOKIE_KEY=
 #iv is 12 bit
 
 AZURE_AUTH_COOKIE_IV=
+
+
+JWT_PRIVATE_KEY=
+JWT_PUBLIC_KEY=
+PRIVATE_DECRYPTION_KEY=a
+KEYCLOAK_HOST=a
+KEYCLOAK_REALM=a
+KEYCLOAK_CLIENT_ID=a
+KEYCLOAK_CLIENT_SECRET=a
+KEYCLOAK_CALLBACK_URL=a
