fix(my-facade-facade): sjd
sd

47

--- a/facades/tenant-mgmt-facade/.env.example
+++ b/facades/tenant-mgmt-facade/.env.example
@@ -27,6 +27,9 @@ AUTH_DB_USER=
 AUTH_DB_SCHEMA=
 AUTH_DB_PASSWORD=
 AUTH_DB_DATABASE=
+AUTH0_DOMAIN=
+AUTH0_CLIENT_ID=
+AUTH0_CLIENT_SECRET=
 
 # payment gateway id of payment gateway used for payment
 GATEWAY_ACCOUNT_ID=
