fix(orchestrator-service): status code can be 200 to 299 for success
GH-00

--- a/services/tenant-mgmt-service/Dockerfile
+++ b/services/tenant-mgmt-service/Dockerfile
@@ -2,7 +2,7 @@
 ARG nodeVer=18-alpine
 
 # select a base image to build from
-FROM public.ecr.aws/docker/library/node:$nodeVer AS BASE
+FROM node:$nodeVer AS BASE
 
 
 # Take the build variables for image base
@@ -58,7 +58,7 @@ RUN npm prune --production
 # RUN /usr/local/bin/node-prune
 
 # Start fresh for a smaller  image size
-FROM public.ecr.aws/docker/library/node:$nodeVer
+FROM node:$nodeVer
 
 # Take the build variables for image stage
 ARG SERVICE_NAME
