--- a/facades/tenant-mgmt-facade/package.json
+++ b/facades/tenant-mgmt-facade/package.json
@@ -195,7 +195,7 @@
         "loopback4-authorization": "^7.0.0",
         "loopback4-helmet": "^7.0.0",
         "loopback4-ratelimiter": "^7.0.0",
-        "stripe": "^17.2.1",
+        "stripe": "~17.2.1",
         "swagger-stats": "^0.99.5",
         "symlink-resolver": "0.2.1",
         "tslib": "^2.4.1"
