--- a/services/subscription-service/package.json
+++ b/services/subscription-service/package.json
@@ -40,7 +40,10 @@
     "docker:push": " docker push $IMAGE_REPO_NAME/$npm_package_name:$npm_package_version",
     "docker:build:dev": "DOCKER_BUILDKIT=1 sudo docker build --build-arg NR_ENABLED=$NR_ENABLED_VALUE --build-arg FROM_FOLDER=services --build-arg SERVICE_NAME=subscription-service -t $IMAGE_REPO_NAME/$npm_package_name:$npm_package_version ../../. -f ./Dockerfile",
     "docker:push:dev": " docker push $IMAGE_REPO_NAME/$npm_package_name:$npm_package_version",
-    "coverage": "nyc npm run test"
+    "coverage": "nyc npm run test",
+    "docker:build:lambda": "DOCKER_BUILDKIT=1 sudo docker build -f Dockerfile.lambda --build-arg NR_ENABLED=$NR_ENABLED_VALUE -t $IMAGE_REPO_NAME/$npm_package_name:$npm_package_version-lambda .",
+    "docker:push:lambda": "sudo docker push $IMAGE_REPO_NAME/$npm_package_name:$npm_package_version-lambda",
+    "docker:run:lambda": "docker run -p 3000:3000 -d  $IMAGE_REPO_NAME/$npm_package_name:$npm_package_version-lambda"
   },
   "repository": {
     "type": "git",
@@ -73,12 +76,13 @@
     "@opentelemetry/sdk-trace-node": "^1.15.0",
     "@sourceloop/core": "^13.1.0",
     "@sourceloop/ctrl-plane-subscription-service": "file:sourceloop-ctrl-plane-subscription-service-0.2.1.tgz",
-    "loopback4-billing": "file:loopback4-billing-0.0.1.tgz",
+    "@vendia/serverless-express": "^4.12.6",
     "dotenv": "^16.0.3",
     "dotenv-extended": "^2.9.0",
     "loopback-connector-postgresql": "^7.0.4",
     "loopback4-authentication": "^12.0.0",
     "loopback4-authorization": "^7.0.0",
+    "loopback4-billing": "file:loopback4-billing-0.0.1.tgz",
     "swagger-stats": "^0.99.5",
     "symlink-resolver": "0.2.1",
     "tslib": "^2.6.2"
