--- a/services/authentication-service/package.json
+++ b/services/authentication-service/package.json
@@ -72,7 +72,7 @@
     "@opentelemetry/plugin-pg-pool": "^0.15.0",
     "@opentelemetry/sdk-trace-base": "^1.15.0",
     "@opentelemetry/sdk-trace-node": "^1.15.0",
-    "@sourceloop/authentication-service": "file:sourceloop-authentication-service-19.2.3.tgz",
+    "@sourceloop/authentication-service": "20.0.0",
     "@sourceloop/core": "^13.0.0",
     "@vendia/serverless-express": "^4.12.6",
     "dotenv": "^16.0.3",
