fix(user-tenant-service): resolve comments
resolve comments

GH-38

--- a/services/user-tenant-service/.env.example
+++ b/services/user-tenant-service/.env.example
@@ -15,3 +15,17 @@ REDIS_PASSWORD=
 REDIS_DATABASE=
 JWT_SECRET=
 JWT_ISSUER=
+KEYCLOAK_CLIENT_ID=
+KEYCLOAK_CLIENT_SECRET=
+KEYCLOAK_REALM_NAME=
+KEYCLOAK_HOST=
+KEYCLOAK_ADMIN_USERNAME=
+KEYCLOAK_ADMIN_PASSWORD=
+AWS_SES_SMTP_HOST=
+AWS_SES_SMTP_USERNAME=
+AWS_SES_SMTP_PASSWORD=
+SMTP_FROM_EMAIL=
+SMTP_FROM_DISPLAY_NAME=
+DOMAIN_NAME=
+AWS_REGION=
+
