feat(my-facade-facade): add communication email in user data
add communication email in user data

g-0

--- a/services/subscription-service/package.json
+++ b/services/subscription-service/package.json
@@ -75,14 +75,13 @@
     "@opentelemetry/sdk-trace-base": "^1.15.0",
     "@opentelemetry/sdk-trace-node": "^1.15.0",
     "@sourceloop/core": "^13.1.0",
-    "@sourceloop/ctrl-plane-subscription-service": "file:sourceloop-ctrl-plane-subscription-service-0.2.1.tgz",
-    "@vendia/serverless-express": "^4.12.6",
+    "@sourceloop/ctrl-plane-subscription-service": "0.3.0",
+    "loopback4-billing": "1.0.0",
     "dotenv": "^16.0.3",
     "dotenv-extended": "^2.9.0",
     "loopback-connector-postgresql": "^7.0.4",
     "loopback4-authentication": "^12.0.0",
     "loopback4-authorization": "^7.0.0",
-    "loopback4-billing": "file:loopback4-billing-0.0.1.tgz",
     "swagger-stats": "^0.99.5",
     "symlink-resolver": "0.2.1",
     "tslib": "^2.6.2"
